# StorManBackend

./: .gitignore  Cargo.toml  Dockerfile  README.md  main.py
.cargo/: config.toml
.github/workflows/: cd.yml  rust.yml
debian/: service
src/: lib.rs  macros.rs  main.rs  models.rs  web_handler.rs
src/web_handlers/: auth.rs  database.rs  item.rs  location.rs  mod.rs  sync.rs  tag.rs
