[package]
name    = "storagereloaded"
version = "1.0.0"
authors = ["Sematre <Sematre@gmx.de>"]
edition = "2018"
description = "Simple self-hosted/all-in-one storage management system"
homepage   = "https://github.com/StorageReloaded/StoRe"
repository = "https://github.com/StorageReloaded/Server"
license    = "GPL-3.0"
keywords   = ["server", "api", "storage", "management"]

[dependencies]
actix-web    = { version = "3", features = ["rustls"] }
actix-cors   = "0.5"
actix-files  = "0.5"
futures      = "0.3"
futures-util = "0.3"
rustls       = "0.18"
sqlx         = { version = "0.5", features = ["runtime-async-std-rustls", "tls", "chrono", "mysql"] }
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
lazy_static  = "1.4"
sysinfo      = "0.17"
config       = "0.11"
rand         = "0.8"
env_logger   = "0.8"
log          = "0.4"

[package.metadata.deb]
maintainer-scripts = "debian/"
systemd-units = { enable = false }
