[package]
name     = "storagereloaded"
version  = "1.0.0"
authors  = ["Sematre <Sematre@gmx.de>"]
rust-version = "1.58.1"
edition  = "2021"
resolver = "2"
description = "Simple self-hosted/all-in-one storage management system"
homepage   = "https://github.com/StorageReloaded/StoRe"
repository = "https://github.com/StorageReloaded/Server"
license    = "GPL-3.0"
keywords   = ["server", "api", "storage", "management"]

[dependencies]
actix-web      = { version = "4", features = ["rustls"] }
actix-cors     = "0.6"
actix-files    = "0.6"
futures        = "0.3"
futures-util   = "0.3"
rustls         = "0.20"
rustls-pemfile = "0.3"
sqlx           = { version = "0.5", features = ["runtime-actix-rustls", "tls", "chrono", "mysql"] }
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
sysinfo        = "0.23"
config         = "0.12"
rand           = "0.8"
log            = "0.4"
env_logger     = "0.9"

[package.metadata.deb]
maintainer-scripts = "debian/"
systemd-units = { enable = false }
